История изменений:
==================
[+] добавлено
[-] удалено
[*] изменено
[!] исправлено
[/] пояснение
[=] совместимость
==================

2011-12-24, v.3.0.0.32
―――――――
[=] Совместимость с FAR 3 build 2298.
[=] Совместимость с LuaFAR v.3.0.0.a1 и LuaFAR for Editor v.3.0.0.a1 .
[/] Включение описаний скриптов в файлы скриптов.
[*] Абстрактный тип common для общего использования.
[+] Новый модуль useNumbers.lua для работы с числами.
    (Перенос функций работы с числами из farUtils.lua.)

2011-05-16, v.3.0.0.8
―――――――
[=] Совместимость с LuaFAR v.3.0.0.2025 и LuaFAR for Editor v.3.0.0.0 .
    (Спасибо Shmuel'у за адаптацию скриптов).
[=] Временная обратная совместимость
    с LuaFAR v.2.8.0 и LuaFAR for Editor v.2.8.0 .
[/] far3.lua + far3_dlg.lua:
    Временное обеспечение совместимости скриптов с FAR 2 и LuaFAR 2.
    Внимание: перестанут работать все встроенные пункты меню плагина!
[*] Изменение API для работы с флагами.
    Флаги должны быть только в виде чисел или битовых строк (см. bit64).
[+] useUtils.lua: Функции для работы с CodePoint символов.
[+] useColors.lua: Поддержка работы с цветами в виде таблиц FarColor.
[/] Изменение стиля комментирования с учётом rhlua.hrc.
[!] manageData.lua: Исправление ошибок и изменение кода.

2011-02-19, v.1.0.7.0
―――――――
[=] Последняя версия для FAR 2 (build 1802).
[+] useUtils.lua: Функции работы с флагами (из Rh_Scripts).
[+] useColors.lua: Функции работы с цветом символа и фона.
[*] Альтернативный вариант определения типа файла (из Rh_Scripts\Samples).

2011-02-02, v.1.0.6.0
―――――――
[=] Совместимость с LuaFAR v.2.8.0.
[*] Перенос функций работы с таблицами в useTables.lua.
[*] Расширение useTables.lua функциями из других пакетов.
[*] Перенос color.lua из LFE config как utils/useColors.lua.
[*] Упрощение использования резидентного модуля (спасибо Shmuel'у).

2011-01-07, v.1.0.5.0
―――――――
[*] useUtils.lua: Дополнительные функции для работы с таблицами.