@@ -1,10 +1,10 @@
 LuaFAR context pack 3.0x
 
-Ver. : 3.0.0.13
-Date : 2011-08-08
+Ver. : 3.0.1.0
+Date : 2012-01-10
 Ware : Freeware
 Lic. : Lua License
-Reqs : FAR v.3.0.2025, LuaFAR v.3.0.0.2025
+Reqs : FAR v.3.0.2352, LuaFAR v.3.0.0
 Type : Plugin for FAR Manager (Script package)
 Desc : LuaFAR context package for LuaFAR plugins and scripts
 
@@ -19,12 +19,12 @@ Auth : A.I. Rakhmatullin
        / А.И. Рахматуллин
 Addr : RF, RT, Kazan
        / РФ, РТ, Казань
-Copy : 2009/2011+
+Copy : 2009/2012+
 Mail : pmi-rai@narod.ru
 
 Home : http://pmi-rai.narod.ru/
 Link : /Programs/FScripts.htm
-URL  : /Programs/FarUtils/LF_context_1_x.7z
+URL  : /Programs/FarUtils/LF_context_3_x.7z
 
   LuaFAR context is a package of scripts for detecting file type
 and working with parameter configuration files linked to file types.
