@@ -8,6 +8,11 @@
 [=] совместимость
 ==================
 
+2012-01-10, v.3.0.1.0
+―――――――
+[=] Совместимость с FAR 3 build 2352.
+[=] Совместимость с LuaFAR v.3.0.0 и LuaFAR for Editor v.3.0.0 .
+
 2011-12-24, v.3.0.0.32
 ―――――――
 [=] Совместимость с FAR 3 build 2298.
